examples/023-AlertManager/SAVE/alert-manager-playbooks/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: alertmanager-service-ingress
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  ports:
  - protocol: TCP
    port: 9093
    targetPort: 9093
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ui
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.singleton.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "alertmanager-service-ingress"
            port:
              number: 9093
